add register validation

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -697,7 +697,7 @@ textarea {
 /*register page*/
 .register-page {
     width: 360px;
-    padding: 8% 0 0;
+    padding: 0;
     margin: auto;
 }
 .register-form {
