--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -43,7 +43,7 @@
                                     <span class="text-white">시작일</span>
                                 </div>
                                 <div class="col-8">
-                                    <input type="date">
+                                    <input class="bg-transparent border-0" type="date" id="startDate" onchange="validateDates()">
                                 </div>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                                     <span class="text-white">종료일</span>
                                 </div>
                                 <div class="col-8">
-                                    <input type="date">
+                                    <input class="bg-transparent border-0" type="date" id="endDate" onchange="validateDates()">
                                 </div>
                             </div>
                         </div>
@@ -62,6 +62,28 @@
             </div>
         </div>
 
+        <script>
+            function validateDates() {
+                let startDateInput = document.getElementById("startDate");
+                let endDateInput = document.getElementById("endDate");
+
+                // 현재 날짜 가져오기
+                let currentDate = new Date();
+                let year = currentDate.getFullYear();
+                let month = String(currentDate.getMonth() + 1).padStart(2, '0');
+                let day = String(currentDate.getDate()).padStart(2, '0');
+
+                let today = year + '-' + month + '-' + day;
+
+                // 시작일의 최소값과 종료일의 최대값을 현재 날짜로 설정
+                startDateInput.min = today;
+                // 시작일과 오늘 중에 더 큰값을 종료일의 최소 값으로 설정
+                endDateInput.min = startDateInput.value > today ? startDateInput.value : today;
+
+                // 여기서 추가적인 검증 또는 메시지 표시를 할 수 있습니다.
+            }
+            validateDates();
+        </script>
 
 
     </div>
