--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -17,6 +17,12 @@
             </div>
         </div>
     </div>
+<!--    to 를 지정해서 요청-->
+    <form th:action="@{/ses/send}" method="get">
+        <input type="text" name="to" placeholder="email">
+        <input type="submit" value="send test">
+    </form>
+<!--    <a href="/ses/send">send test</a>-->
 
         <div class="container mt-5 mb-3">
             <div id="rs-list" class="row">
