--- a/src/main/resources/templates/pages/research/readform.html
+++ b/src/main/resources/templates/pages/research/readform.html
@@ -34,8 +34,8 @@
 <!--        </div>-->
 <!--        currentRsiNo-->
         <div class="answer-content-footer row-cols-3 d-flex justify-content-between w-100 m-0 px-2" id="prevnextButtons">
-            <button class="btn btn-toolbar col-auto border-dark" onclick="handleAnswerPage('<')">이전 문제</button>
-            <button class="btn btn-toolbar col-auto border-dark" onclick="handleAnswerPage('>')">다음 문제</button>
+            <button class="btn btn-toolbar col-auto border-dark pagebutton-prev" onclick="handleAnswerPage('<')">이전 문제</button>
+            <button class="btn btn-toolbar col-auto border-dark pagebutton-next" onclick="handleAnswerPage('>')">다음 문제</button>
         </div>
 
     </div>
