--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -5,12 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<div th:fragment="sidebar">
+<div th:fragment="sidebar(pageName)">
     <div class="sidebar-container position-absolute top-0 overflow-hidden d-flex flex-column vh-100 flex-shrink-0 py-3 text-white ">
         <!--        sidebar header-->
         <div class="align-items-center m-0 mt-3 text-white text-decoration-none row">
 
-            <h5 class=" ms-5 col">Create</h5>
+            <h5 class="ms-5 col" th:text="${pageName}">Create</h5>
 
         </div>
         <hr>
@@ -91,7 +91,7 @@
                 </div>
             </li>
             <li class="sidebar-footer">
-<!--                제출 버튼-->
+    <!--                제출 버튼-->
                 <div class="sidebar-submit-button" onclick="handleSidebarSubmitButtonClick(this)">제출</div>
             </li>
         </ul>
