--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+    <div th:replace="~{fragments/sidebar :: sidebar('Create')}"></div>
 
     <!--    main content-->
 <!--    여기는 하드코딩으로 바꿔야함-->
@@ -61,32 +61,29 @@
                 </div>
             </div>
         </div>
-
-        <script>
-            function validateDates() {
-                let startDateInput = document.getElementById("startDate");
-                let endDateInput = document.getElementById("endDate");
-
-                // 현재 날짜 가져오기
-                let currentDate = new Date();
-                let year = currentDate.getFullYear();
-                let month = String(currentDate.getMonth() + 1).padStart(2, '0');
-                let day = String(currentDate.getDate()).padStart(2, '0');
-
-                let today = year + '-' + month + '-' + day;
-
-                // 시작일의 최소값과 종료일의 최대값을 현재 날짜로 설정
-                startDateInput.min = today;
-                // 시작일과 오늘 중에 더 큰값을 종료일의 최소 값으로 설정
-                endDateInput.min = startDateInput.value > today ? startDateInput.value : today;
-
-                // 여기서 추가적인 검증 또는 메시지 표시를 할 수 있습니다.
-            }
-            validateDates();
-        </script>
-
-
     </div>
+    <script>
+        function validateDates() {
+            let startDateInput = document.getElementById("startDate");
+            let endDateInput = document.getElementById("endDate");
+
+            // 현재 날짜 가져오기
+            let currentDate = new Date();
+            let year = currentDate.getFullYear();
+            let month = String(currentDate.getMonth() + 1).padStart(2, '0');
+            let day = String(currentDate.getDate()).padStart(2, '0');
+
+            let today = year + '-' + month + '-' + day;
+
+            // 시작일의 최소값과 종료일의 최대값을 현재 날짜로 설정
+            startDateInput.min = today;
+            // 시작일과 오늘 중에 더 큰값을 종료일의 최소 값으로 설정
+            endDateInput.min = startDateInput.value > today ? startDateInput.value : today;
+
+            // 여기서 추가적인 검증 또는 메시지 표시를 할 수 있습니다.
+        }
+        validateDates();
+    </script>
 
 </div>
 </body>
