--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -18,10 +18,10 @@
         </div>
     </div>
 <!--    to 를 지정해서 요청-->
-<!--    <form th:action="@{/ses/send}" method="get">-->
-<!--        <input type="text" name="to" placeholder="email">-->
-<!--        <input type="submit" value="send test">-->
-<!--    </form>-->
+    <form th:action="@{/ses/send}" method="get">
+        <input type="text" name="to" placeholder="email">
+        <input type="submit" value="send test">
+    </form>
 
         <div class="container mt-5 mb-3">
             <div id="rs-list" class="row">
