--- a/src/main/resources/templates/pages/auth/register.html
+++ b/src/main/resources/templates/pages/auth/register.html
@@ -9,8 +9,10 @@
 <body>
 <div layout:fragment="content">
     <!-- Bootstrap 경고 메시지 -->
-    <div class="alert alert-danger mt-2 position-fixed fixed-top" id="validation-error" style="display: none;"></div>
 <!--    usernameError passwordError 등 서버에서 모델에 전달해준 에러가 있다면 표시한다-->
+    <div class="alert alert-danger mt-2 position-fixed fixed-top" id="validation-error" style="display: none;"></div>
+<!--    알려줄 정보가 있다면 이곳에 표시한다 -->
+    <div class="alert alert-info mt-2 position-fixed fixed-top" id="info-message" style="display: none;"></div>
     <div class="register-page">
         <form class="register-form" th:object="${registrationDTO}" th:action="@{/auth/register}" method="post" onsubmit="return validateForm()">
             <div class="mb-3">
@@ -33,26 +35,93 @@
                 <label for="email" class="form-label">이메일</label>
                 <input type="text" name="email" class="form-control" id="email" th:value="*{email}">
             </div>
+            <button type="button" class="btn btn-primary" onclick="createEmailVerificationField(this)">이메일 인증</button>
+
+            <div id="emailVerificationField"></div>
             <div class="mb-3">
                 <label for="phone" class="form-label">전화번호</label>
                 <input type="text" name="phone" class="form-control" id="phone" th:value="*{phone}">
             </div>
+            <button type="button" class="btn btn-primary" onclick="createPhoneVerificationField(this)">휴대폰 인증</button>
+
+            <div id="phoneVerificationField"></div>
+<!--            <input type="hidden" name="emailVerified" th:value="*{emailVerified}">-->
+<!--            <input type="hidden" name="phoneVerified" th:value="*{phoneVerified}">-->
             <button type="submit" class="btn btn-primary">가입완료</button>
         </form>
     </div>
-<script th:inline="javascript">
-    /*<![CDATA[*/
-    let usernameError = [[${usernameError}]];
-    let passwordError = [[${passwordError}]];
-    let passwordConfirmError = [[${passwordConfirmError}]];
-    let nameError = [[${nameError}]];
-    let emailError = [[${emailError}]];
-    let phoneError = [[${phoneError}]];
-    /*]]>*/
-</script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        let usernameError = [[${usernameError}]];
+        let passwordError = [[${passwordError}]];
+        let passwordConfirmError = [[${passwordConfirmError}]];
+        let nameError = [[${nameError}]];
+        let emailError = [[${emailError}]];
+        let phoneError = [[${phoneError}]];
+        let isEmailVerified = [[${isEmailVerified}]];
+        let isPhoneVerified = [[${isPhoneVerified}]];
+        /*]]>*/
+    </script>
+    <script>
+        function createEmailVerificationField(e) {
+            let emailVerificationField = document.getElementById("emailVerificationField");
+            emailVerificationField.innerHTML = '';
+
+
+            let input = document.createElement("input");
+            input.type = "text";
+            input.name = "emailVerificationCode";
+            input.className = "form-control";
+            input.placeholder = "이메일 인증 코드";
+            emailVerificationField.appendChild(input);
+
+            let confirmButton = document.createElement("button");
+            confirmButton.type = "button";
+            confirmButton.className = "btn btn-primary";
+            confirmButton.textContent = "확인";
+            confirmButton.onclick = function() {
+                // 인증 코드 확인 로직을 여기에 추가
+                // 인증이 성공하면 아래 코드를 사용하여 인증 코드 입력 필드를 숨김
+                input.style.display = "none";
+                confirmButton.style.display = "none";
+                // emailVerificationField.innerHTML = "인증되었습니다";
+                e.style.display = "none";
+                displayInfoMessage("인증되었습니다");
+            };
+            emailVerificationField.appendChild(confirmButton);
+        }
+
+        function createPhoneVerificationField(e) {
+            let phoneVerificationField = document.getElementById("phoneVerificationField");
+            phoneVerificationField.innerHTML = '';
+
+            let input = document.createElement("input");
+            input.type = "text";
+            input.name = "phoneVerificationCode";
+            input.className = "form-control";
+            input.placeholder = "휴대폰 인증 코드";
+            phoneVerificationField.appendChild(input);
+
+            let confirmButton = document.createElement("button");
+            confirmButton.type = "button";
+            confirmButton.className = "btn btn-primary";
+            confirmButton.textContent = "확인";
+            confirmButton.onclick = function() {
+                // 인증 코드 확인 로직을 여기에 추가
+                // 인증이 성공하면 아래 코드를 사용하여 인증 코드 입력 필드를 숨김
+                input.style.display = "none";
+                confirmButton.style.display = "none";
+                e.style.display = "none";
+                displayInfoMessage("인증되었습니다");
+            };
+            phoneVerificationField.appendChild(confirmButton);
+        }
+    </script>
+
 
     <script>
         let validationError = document.getElementById("validation-error");
+        let infoMessage = document.getElementById("info-message");
         validateForm(usernameError||passwordError||passwordConfirmError||nameError||emailError||phoneError);
         function validateForm(errorMessage) {
             if (errorMessage) {
@@ -67,7 +136,6 @@
             let email = document.getElementById("email").value;
             let phone = document.getElementById("phone").value;
             let validationError = document.getElementById("validation-error");
-
             // 유효성 검사 및 오류 메시지 표시
             if (username.length < 4 || username.length > 20) {
                 displayErrorMessage("아이디는 4자 이상 20자 이하로 입력해주세요.");
@@ -95,14 +163,12 @@
                 document.getElementById("email").focus();
                 return false;
             }
-
             // 전형적인 이메일 형식 이여야한다
             if (!email.includes(".")) {
                 displayErrorMessage("이메일 형식이 올바르지 않습니다.");
                 document.getElementById("email").focus();
                 return false;
             }
-
             // 전화번호 유효성 검사
             // 숫자만 넣도록 유도
             if (phone.includes("-")) {
@@ -110,29 +176,22 @@
                 document.getElementById("phone").focus();
                 return false;
             }
-
             if (isNaN(phone)) {
                 displayErrorMessage("전화번호는 숫자만 입력해주세요.");
                 document.getElementById("phone").focus();
                 return false;
             }
-
             // 전화번호는 010으로 시작해야한다
             if (!phone.startsWith("010")) {
                 displayErrorMessage("전화번호는 010으로 시작해야합니다.");
                 document.getElementById("phone").focus();
                 return false;
             }
-
             if (phone.length < 10 || phone.length > 11) {
                 displayErrorMessage("전화번호는 10자 이상 11자 이하로 입력해주세요.");
                 document.getElementById("phone").focus();
                 return false;
             }
-
-
-
-
             // 모든 유효성 검사 통과 시 폼 제출
             hideErrorMessage();
             return true;
@@ -147,9 +206,21 @@
             }, 1000); // 1초 후에 숨김
         }
 
+        function displayInfoMessage(message) {
+            infoMessage.innerHTML = message;
+            infoMessage.style.display = "block";
+            setTimeout(function() {
+                hideInfoMessage();
+            }, 1000); // 1초 후에 숨김
+        }
+
         // 경고 메시지를 숨깁니다.
         function hideErrorMessage() {
             validationError.style.display = "none";
+        }
+
+        function hideInfoMessage() {
+            infoMessage.style.display = "none";
         }
     </script>
 
